# Disbot

./: bot.py  config.py  main.py  pyproject.toml
cogs/: analytics.py  automod.py  events.py  fun.py  help.py  logging.py  moderation.py  reputation.py  tickets.py  utility.py
utils/: database.py  db_manager.py  helpers.py
